[ADD]: Simple doc

--- a/doc/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/doc/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -4,4 +4,10 @@
 \begin{DoxyCompactItemize}
 \item 
 file \hyperlink{corn__check__clock_8c}{corn\+\_\+check\+\_\+clock.\+c}
+\item 
+file \hyperlink{corn__create__text_8c}{corn\+\_\+create\+\_\+text.\+c}
+\item 
+file \hyperlink{corn__load__sound_8c}{corn\+\_\+load\+\_\+sound.\+c}
+\item 
+file \hyperlink{corn__move__rect_8c}{corn\+\_\+move\+\_\+rect.\+c}
 \end{DoxyCompactItemize}
