--- a/doc/latex/files.tex
+++ b/doc/latex/files.tex
@@ -2,4 +2,7 @@
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{include/{\bfseries corn.\+h} }{\pageref{corn_8h}}{}
 \item\contentsline{section}{src/\hyperlink{corn__check__clock_8c}{corn\+\_\+check\+\_\+clock.\+c} }{\pageref{corn__check__clock_8c}}{}
+\item\contentsline{section}{src/\hyperlink{corn__create__text_8c}{corn\+\_\+create\+\_\+text.\+c} }{\pageref{corn__create__text_8c}}{}
+\item\contentsline{section}{src/\hyperlink{corn__load__sound_8c}{corn\+\_\+load\+\_\+sound.\+c} }{\pageref{corn__load__sound_8c}}{}
+\item\contentsline{section}{src/\hyperlink{corn__move__rect_8c}{corn\+\_\+move\+\_\+rect.\+c} }{\pageref{corn__move__rect_8c}}{}
 \end{DoxyCompactList}
