--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -142,6 +142,9 @@
 \input{files}
 \chapter{File Documentation}
 \input{corn__check__clock_8c}
+\input{corn__create__text_8c}
+\input{corn__load__sound_8c}
+\input{corn__move__rect_8c}
 %--- End generated contents ---
 
 % Index
